<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rootview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >

        <RelativeLayout
            android:id="@+id/titlebar_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/titlebar_height"
            android:background="@color/colorPrimaryDark">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="center_horizontal"
                android:text="@string/setting_heading"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </RelativeLayout>
        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="6dp"

            android:layout_below="@id/titlebar_layout"
            android:background="@drawable/drop_shadow" />
        <RelativeLayout
            android:id="@+id/contents_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/titlebar_layout">

            <ScrollView
                android:id="@+id/scrollView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <View
                        android:id="@+id/divider2"
                        android:layout_width="match_parent"
                        android:layout_height="5dp"
                        android:background="@drawable/drop_shadow" />

                    <RelativeLayout
                        android:id="@+id/sound_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/divider2"
                        android:padding="5dp"
                        android:onClick="viewClickHandler">

                        <ImageView
                            android:id="@+id/sound"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:src="@drawable/ic_sound" />

                        <TextView
                            android:id="@+id/sound_textview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_toEndOf="@+id/sound"
                            android:padding="10dp"
                            android:text="@string/sound"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                            android:textStyle="bold" />

                        <androidx.appcompat.widget.SwitchCompat
                            android:id="@+id/sound_checkbox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:onClick="viewClickHandler"
                            android:padding="10dp" />
                    </RelativeLayout>

                    <View
                        android:id="@+id/divider3"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/divider_height"
                        android:layout_below="@+id/sound_layout"
                        android:background="@drawable/drop_shadow" />

                    <RelativeLayout
                        android:id="@+id/vibration_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/divider3"
                        android:padding="5dp"
                        android:onClick="viewClickHandler">

                        <ImageView
                            android:id="@+id/vibration"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:src="@drawable/ic_vibration" />

                        <TextView
                            android:id="@+id/vibration_textview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_toEndOf="@+id/vibration"
                            android:padding="10dp"
                            android:text="@string/vibration"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                            android:textStyle="bold" />

                        <androidx.appcompat.widget.SwitchCompat
                            android:id="@+id/vibration_checkbox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:onClick="viewClickHandler"
                            android:padding="10dp" />


                    </RelativeLayout>

                    <View
                        android:id="@+id/divider4"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/divider_height"
                        android:layout_below="@+id/vibration_layout"
                        android:background="@drawable/drop_shadow" />

                    <View
                        android:id="@+id/divider12"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/divider_height"
                        android:layout_below="@+id/divider4"
                        android:background="@drawable/drop_shadow" />

                    <ImageView
                        android:layout_marginTop="@android:dimen/app_icon_size"
                        android:layout_below="@id/divider12"
                        android:layout_centerHorizontal="true"
                        android:id="@+id/imageNight"
                        android:layout_width="250dp"
                        android:layout_height="250dp" />

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_below="@+id/imageNight"
                        android:layout_centerHorizontal="true"
                        android:layout_height="wrap_content">


                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">


                            <TextView
                                android:id="@+id/txtNightMode"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textStyle="bold"
                                android:padding="10dp"
                                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                                android:text="Dark Mode" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/nightswitch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                       android:layout_centerVertical="true"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                        </LinearLayout>
                    </RelativeLayout>

                </RelativeLayout>
            </ScrollView>
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>